// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs should not render without crumbs 1`] = `
<DocumentFragment>
  <div />
</DocumentFragment>
`;

exports[`Breadcrumbs should render 1`] = `
<DocumentFragment>
  <div>
    <div
      class="flex items-center space-x-3 text-sm "
      data-testid="breadcrumbs__wrapper"
    >
      <div
        class="sc-gsTCUz fwbmIJ text-theme-neutral-500"
        height="24"
        width="13"
      >
        <svg>
          arrow-left.svg
        </svg>
      </div>
      <span
        class="space-x-3"
      >
        <span
          class="text-theme-neutral-700"
        >
          Dashboard
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Breadcrumbs should render with custom classes 1`] = `
<DocumentFragment>
  <div>
    <div
      class="flex items-center space-x-3 text-sm class-name"
      data-testid="breadcrumbs__wrapper"
    >
      <div
        class="sc-gsTCUz fwbmIJ text-theme-neutral-500"
        height="24"
        width="13"
      >
        <svg>
          arrow-left.svg
        </svg>
      </div>
      <span
        class="space-x-3"
      >
        <a
          class="text-theme-neutral-500 hover:underline"
          href="/wallets"
        >
          <span>
            Wallets
          </span>
        </a>
        <span>
          <div
            class="Divider-sc-19q4mlo-0 gSJoMw border-theme-neutral-300 dark:border-theme-neutral-800"
            type="vertical"
          />
        </span>
      </span>
      <span
        class="space-x-3"
      >
        <span
          class="text-theme-neutral-700"
        >
          My Wallet
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;
